Fixed buttons and spacing

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -166,12 +166,6 @@ nav {
   text-align:left;
 }
 
-button{
-  color: #06807F;
-  background-color: #FFFFFF;
-  outline-style:none;
-}
-
 
 /*
 -------------------------------------------------------------------------
@@ -192,7 +186,17 @@ test stuff
     font-weight: bold;
     color: #06807F;
     text-decoration: none;
-      font-size: 25px;
+    font-size: 25px;
+
+}
+
+.text-over-picture a{
+  text-decoration: none;
+}
+
+.button-padding {
+  padding-top: 10px;
+  color: none;
 }
 
 /*
